k8s/services/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: hospital-ml
  labels:
    app: ui
    tier: frontend
    part-of: hospital-ml
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
        tier: frontend
        part-of: hospital-ml
    spec:
      securityContext:
        fsGroup: 2000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: ui
          image: saikeerthan06/ui:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8501
          volumeMounts:
            - name: shared
              mountPath: /shared
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: shared-pvc
