k8s/services/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: hospital-ml
  labels:
    app: ui
    tier: frontend
    part-of: hospital-ml
spec:
  type: ClusterIP
  selector:
    app: ui
  ports:
    - name: http
      port: 80
      targetPort: http
