k8s/services/ui/ingress.yaml
# -----------------------------------------------------------------------------
# This file defines the Ingress resource for the UI service.
# It routes external HTTP traffic to the internal UI service on port 80.
# NGINX annotations (commented) are provided for configuring timeouts and body size.
# -----------------------------------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  namespace: hospital-ml
  annotations:
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: ui.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
